# templated_generator

./: .gitignore  README.md  build.bat  build.sh  build_no_lib.bat  clean.bat  clean.sh  define.xlsx  jacg.code-workspace  pub_cc.bat  pub_cc.sh  rebuild.bat  ttt.xlsx
doc/tree_struct/: cpp_header.docx  json.docx
projects/jacg/: .clang-format  CMakeLists.txt  CMakeLists.txt.bk  build.bat  build.sh  clean.bat  jacg.code-workspace
projects/jacg/src/: dirhelper.h  indent.h  main.cpp  stl.h  uniqs_tmpl_generator.cpp  uniqs_tmpl_generator.h  uniqs_xlsx_generator.h  uniqs_xlsx_generator_cpp.cpp  uniqs_xlsx_generator_cpp.h  utemplate.cpp  utemplate.h
projects/jacg/uniqs_xlsx_reader/: uniqs_xlsx_reader.cpp  uniqs_xlsx_reader.h
projects/openxlsx/: build.bat  build.sh  clean.bat
projects/openxlsx/OpenXLSX-20220507/: OpenXLSX-20220507.code-workspace
projects/openxlsx/OpenXLSX-20220507/OpenXLSX/: CMakeLists.txt
projects/test_simdjson/: CMakeLists.txt  build.sh  clean.bat  rebuild.bat
projects/test_simdjson/cfg_cpp/: test.cpp
projects/test_simdjson/cfg_cpp/rules/: ColInitValue.xml  ColType.xml  TransColType2ReadFunc.xml
projects/test_simdjson/cfg_cpp/templates/: CfgTables.cpp  DT{{%=SheetName%}}.csv  DT{{%=SheetName%}}.h  DT{{%=SheetName%}}.json
projects/test_simdjson/gen_cpp/: BaseTypes.h  CfgTables.cpp  CfgTables.h  CfgTypes.h  CfgTypesRead.h  DTtest.h  strtk_helper.h
projects/test_simdjson/include/: json_helper.h
projects/test_simdjson/src/: json_helper.cpp  main.cpp
